# SnapBase

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_ollama.py
app/: cli.py
config/: store.py
llm/: __init__.py  generator.py  ollama_generator.py
